server can now send points to client

--- a/libs/charts/Cargo.toml
+++ b/libs/charts/Cargo.toml
@@ -11,3 +11,9 @@ alloc_data = { path = "../data" }
 lazy_static = "*"
 error-chain = "*"
 regex = "*"
+serde_json = "*"
+serde = "*"
+serde_derive = "*"
+serde_regex = "*"
+yew = "*"
+failure = "*"
