working on filters, still offline. Footer is online

--- a/libs/client/Cargo.toml
+++ b/libs/client/Cargo.toml
@@ -22,3 +22,5 @@ regex = "*"
 error-chain = "*"
 alloc_data = { path = "../data" }
 charts = { path = "../charts" }
+strum = "*"
+strum_macros = "*"
