--- a/libs/client/Cargo.toml
+++ b/libs/client/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+lto = true
+opt-level=3
+
 [dependencies]
 log = "*"
 web_logger = "*"
