--- a/libs/charts/Cargo.toml
+++ b/libs/charts/Cargo.toml
@@ -7,12 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base = { path = "../base" }
 alloc_data = { path = "../alloc_data" }
 
 anyhow = "*"
 error-chain = "*"
 lazy_static = "*"
-rand = { version = "*", features = ["small_rng"] }
 regex = "*"
 safe_index = "*"
 serde = "*"
