--- a/libs/client/Cargo.toml
+++ b/libs/client/Cargo.toml
@@ -6,10 +6,14 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+lto = true
+opt-level = 3
+
 [dependencies]
-alloc_data = { path = "../libs/alloc_data" }
-base = { path = "../libs/base" }
-charts = { path = "../libs/charts" }
+alloc_data = { path = "../alloc_data" }
+base = { path = "../base" }
+charts = { path = "../charts" }
 
 chrono = "*"
 error-chain = "*"
