--- a/libs/alloc_data/Cargo.toml
+++ b/libs/alloc_data/Cargo.toml
@@ -5,14 +5,13 @@ authors = ["Adrien Champion <adrien.champion@email.com>"]
 edition = "2018"
 
 [dependencies]
-chrono = { version = "*", features = ["serde"] }
+chrono = { version = "*", features = ["serde", "wasmbind"] }
 error-chain = "*"
 lazy_static = "*"
 num-bigint = { version = "*", features = ["serde"] }
 num-traits = "*"
 serde = "*"
 serde_derive = "*"
-stdweb = "*"
 toml = "*"
 
 swarkn = { git = "https://github.com/AdrienChampion/swarkn" }
