--- a/libs/client/Cargo.toml
+++ b/libs/client/Cargo.toml
@@ -28,7 +28,7 @@ serde = "*"
 strum = "*"
 strum_macros = "*"
 typed-html = { version = "*" }
-web_logger = "*"
+wasm-logger = "*"
 wasm-bindgen = "*"
 web-sys = "*"
 yew = { version = "0.14.3", features = ["web_sys"] }
