--- a/libs/client/Cargo.toml
+++ b/libs/client/Cargo.toml
@@ -18,6 +18,7 @@ chrono = "*"
 error-chain = "*"
 lazy_static = "*"
 log = "*"
+plotters = "*"
 regex = "*"
 safe_index = "*"
 serde = "*"
@@ -26,5 +27,6 @@ strum_macros = "*"
 typed-html = { version = "*" }
 wasm-logger = "*"
 wasm-bindgen = "*"
-web-sys = "*"
+web-sys = { version = "*", features = ["HtmlCanvasElement"] }
+wee_alloc = "*"
 yew = { version = "0.14.3", features = ["web_sys"] }
