--- a/libs/client/Cargo.toml
+++ b/libs/client/Cargo.toml
@@ -27,6 +27,6 @@ strum_macros = "*"
 typed-html = { version = "*" }
 wasm-logger = "*"
 wasm-bindgen = "*"
-web-sys = { version = "*", features = ["HtmlCanvasElement"] }
+web-sys = { version = "*", features = ["HtmlCanvasElement", "Element", "NamedNodeMap", "Attr"] }
 wee_alloc = "*"
 yew = { version = "0.14.3", features = ["web_sys"] }
