--- a/libs/charts/Cargo.toml
+++ b/libs/charts/Cargo.toml
@@ -21,4 +21,4 @@ serde_json = "*"
 serde_regex = "*"
 strum = "*"
 strum_macros = "*"
-yew = { version = "0.14.3", features = ["web_sys"] }
+yew = { git = "https://github.com/yewstack/yew" }
