now using cooked plotters dep, minor fixes

--- a/libs/charts/Cargo.toml
+++ b/libs/charts/Cargo.toml
@@ -15,7 +15,7 @@ chrono = "*"
 error-chain = "*"
 lazy_static = "*"
 num-format = "*"
-plotters = "*"
+plotters = { git = "https://github.com/AdrienChampion/plotters", branch = "canvas_fixes" }
 regex = "*"
 safe_index = "*"
 serde = "*"
