--- a/libs/client/Cargo.toml
+++ b/libs/client/Cargo.toml
@@ -19,7 +19,7 @@ error-chain = "*"
 lazy_static = "*"
 log = "*"
 palette = "*"
-plotters = "*"
+plotters = { git = "https://github.com/AdrienChampion/plotters", branch = "canvas_fixes" }
 regex = "*"
 safe_index = "*"
 serde = "*"
