--- a/libs/base/Cargo.toml
+++ b/libs/base/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+error-chain = "*"
 derive_more = "*"
+lazy_static = "*"
 rand = { version = "*", features = ["small_rng"] }
