improved labels/trace sharing, improved parsing, startup now about 3 times faster (in release)

--- a/libs/alloc_data/Cargo.toml
+++ b/libs/alloc_data/Cargo.toml
@@ -11,6 +11,7 @@ chrono = { version = "*", features = ["serde", "wasmbind"] }
 num-bigint = { version = "*", features = ["serde"] }
 num-traits = "*"
 peg = "*"
+rayon = "*"
 serde = "*"
 serde_derive = "*"
 toml = "*"
