improvements in y-axis-label chart rendering

--- a/libs/charts/Cargo.toml
+++ b/libs/charts/Cargo.toml
@@ -11,7 +11,7 @@ base = { path = "../base" }
 alloc_data = { path = "../alloc_data" }
 
 anyhow = "*"
-num-format = "*"
+number_prefix = "*"
 plotters = { git = "https://github.com/AdrienChampion/plotters", branch = "canvas_fixes" }
 regex = "*"
 safe_index = "*"
