[CTF] parsing complete, now need to integrate into the server

--- a/libs/alloc_data/Cargo.toml
+++ b/libs/alloc_data/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2018"
 
 [dependencies]
 base = { path = "../base" }
+ctf = { path = "../ctf" }
 
-chrono = { version = "*", features = ["serde", "wasmbind"] }
 num-bigint = { version = "*", features = ["serde"] }
 num-traits = "*"
 peg = "*"
