--- a/libs/base/Cargo.toml
+++ b/libs/base/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = { version = "*", features = ["serde", "wasmbind"] }
 either = "*"
 error-chain = "*"
 derive_more = "*"
 lazy_static = "*"
+peg = "*"
 rand = { version = "*", features = ["small_rng"] }
 smallvec = "*"
