added some conditional compilation for server/client slicing

--- a/libs/alloc_data/Cargo.toml
+++ b/libs/alloc_data/Cargo.toml
@@ -14,3 +14,8 @@ rayon = "*"
 serde = "*"
 serde_derive = "*"
 toml = "*"
+
+[features]
+server = [ "base/server" ]
+client = [ "base/client" ]
+default = []
