switched from websocket to tunstenite for socket handling

--- a/memthol/Cargo.toml
+++ b/memthol/Cargo.toml
@@ -14,7 +14,7 @@ charts = { path = "../libs/charts", features = ["server"] }
 gotham = "*"
 error-chain = "*"
 lazy_static = "*"
-websocket = "*"
+tungstenite = "*"
 clap = "*"
 
 [build-dependencies]
