logging, some time stats, significantly optimized message passing overhead

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -49,6 +49,8 @@ args = [
     "--out-name", "client",
     "--out-dir", "${target_path}/client.wasm/debug",
     "${client_crate_path}",
+    "--",
+    "${@}",
 ]
 
 [tasks.release_wasm]
@@ -63,6 +65,8 @@ args = [
     "--out-name", "client",
     "--out-dir", "${target_path}/client.wasm/release",
     "${client_crate_path}",
+    "--",
+    "${@}",
 ]
 
 [tasks.test]
@@ -71,7 +75,7 @@ dependencies = [
 ]
 command = "cargo"
 args = [
-    "test", "--all"
+    "test", "--all", "${@}",
 ]
 
 [tasks.build]
@@ -81,6 +85,8 @@ dependencies = [
 command = "cargo"
 args = [
     "build",
+    "--manifest-path", "memthol/Cargo.toml",
+    "${@}",
 ]
 
 [tasks.build_release]
@@ -90,6 +96,8 @@ dependencies = [
 command = "cargo"
 args = [
     "build", "--release",
+    "--manifest-path", "memthol/Cargo.toml",
+    "${@}",
 ]
 
 [tasks.release]
@@ -105,4 +113,6 @@ cp target/release/memthol ./memthol_ui
 
 [tasks.clean]
 command = "cargo"
-args = ["clean"]
+args = [
+    "clean", "${@}",
+]
