--- a/libs/charts/Cargo.toml
+++ b/libs/charts/Cargo.toml
@@ -12,6 +12,7 @@ alloc_data = { path = "../alloc_data" }
 ctf = { path = "../ctf", optional = true }
 
 anyhow = "*"
+bincode = "*"
 number_prefix = "*"
 palette = "*"
 plotters = "*"
@@ -19,7 +20,6 @@ plotters-backend = "*"
 regex = "*"
 safe_index = "*"
 serde = "*"
-serde_json = "*"
 serde_regex = "*"
 strum = "*"
 strum_macros = "*"
@@ -28,9 +28,9 @@ yew = "*"
 [features]
 server = [ "ctf", "alloc_data/server", "base/server" ]
 client = [ "alloc_data/client", "base/client" ]
-default = []
-profiling = [
-    "alloc_data/profiling",
-    "base/profiling",
-    "ctf/profiling",
+default = [ "server" ]
+time_stats = [
+    "alloc_data/time_stats",
+    "base/time_stats",
+    "ctf/time_stats",
 ]
