time_stats features tweaks, fixed progression updates in CTF mode

--- a/libs/alloc_data/Cargo.toml
+++ b/libs/alloc_data/Cargo.toml
@@ -19,6 +19,4 @@ toml = "*"
 server = [ "base/server" ]
 client = [ "base/client" ]
 default = [ "server" ]
-time_stats = [
-    "base/time_stats",
-]
+time_stats = []
