--- a/libs/charts/Cargo.toml
+++ b/libs/charts/Cargo.toml
@@ -29,8 +29,9 @@ yew = "*"
 server = [ "ctf", "alloc_data/server", "base/server" ]
 client = [ "alloc_data/client", "base/client" ]
 default = [ "server" ]
-time_stats = [
-    "alloc_data/time_stats",
-    "base/time_stats",
+time_stats = []
+all_time_stats = [
+    "time_stats",
     "ctf/time_stats",
+    "alloc_data/time_stats",
 ]
