--- a/memthol/Cargo.toml
+++ b/memthol/Cargo.toml
@@ -25,7 +25,7 @@ walkdir = "*"
 
 [features]
 default = []
-time_stats = [
-    "base/time_stats",
-    "charts/time_stats",
+time_stats = []
+all_time_stats = [
+    "charts/all_time_stats",
 ]
