--- a/memthol/Cargo.toml
+++ b/memthol/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "memthol"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Adrien Champion <adrien.champion@ocamlpro.com"]
 edition = "2018"
 
@@ -14,6 +14,7 @@ clap = "*"
 error-chain = "*"
 gotham = "*"
 lazy_static = "*"
+open = "*"
 pretty_env_logger = "^0.4"
 tungstenite = "*"
 
