--- a/libs/charts/Cargo.toml
+++ b/libs/charts/Cargo.toml
@@ -14,6 +14,7 @@ ctf = { path = "../ctf", optional = true }
 anyhow = "*"
 number_prefix = "*"
 palette = "*"
+peg = "*"
 plotters = "*"
 plotters-backend = "*"
 regex = "*"
