fix in time-stats cfg

--- a/libs/alloc_data/Cargo.toml
+++ b/libs/alloc_data/Cargo.toml
@@ -19,4 +19,6 @@ toml = "*"
 server = [ "base/server" ]
 client = [ "base/client" ]
 default = [ "server" ]
-time_stats = []
+time_stats = [
+    "base/time_stats",
+]
