readme update: don't mention legacy dumps, discuss CTF

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -106,7 +106,7 @@ dependencies = [
 script = [
 '''
 #!@shell
-cp target/release/memthol ./memthol_ui
+cp target/release/memthol ./memthol
 '''
 ]
 
